--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "algoliasearch": "^4.11.0",
     "firebase": "^9.1.2",
     "firebase-admin": "^9.12.0",
+    "geofire-common": "^5.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-instantsearch-dom": "^6.13.0",
+    "react-instantsearch-dom-maps": "^6.13.0",
     "react-modal": "^3.14.3",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
