--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "npm": "7.x"
   },
   "dependencies": {
+    "@googlemaps/js-api-loader": "^1.12.6",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -14,6 +15,8 @@
     "firebase": "^9.1.2",
     "firebase-admin": "^9.12.0",
     "geofire-common": "^5.2.0",
+    "google-map-react": "^2.1.10",
+    "google-maps": "^4.3.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-instantsearch-dom": "^6.13.0",
