--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
   },
   "dependencies": {
     "@googlemaps/js-api-loader": "^1.12.6",
+    "@react-google-maps/api": "^2.5.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "algoliasearch": "^4.11.0",
+    "axios": "^0.23.0",
     "firebase": "^9.1.2",
     "firebase-admin": "^9.12.0",
     "geofire-common": "^5.2.0",
