--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "google-map-react": "^2.1.10",
     "google-maps": "^4.3.3",
     "react": "^17.0.2",
+    "react-accessible-accordion": "^4.0.0",
     "react-dom": "^17.0.2",
     "react-instantsearch-dom": "^6.13.0",
     "react-instantsearch-dom-maps": "^6.13.0",
