updated dependencies. Outdated long lenght 0

--- a/package.json
+++ b/package.json
@@ -3,37 +3,37 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": "14.x",
-    "npm": "7.x"
+    "node": ">=14.x",
+    "npm": ">=7.x"
   },
   "dependencies": {
     "@googlemaps/js-api-loader": "^1.12.6",
     "@react-google-maps/api": "^2.5.0",
     "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
+    "@testing-library/react": "^12.1.4",
+    "@testing-library/user-event": "^13.5.0",
     "algoliasearch": "^4.11.0",
-    "axios": "^0.23.0",
+    "axios": "^0.26.1",
     "firebase": "^9.1.2",
-    "firebase-admin": "^9.12.0",
+    "firebase-admin": "^10.0.2",
     "geofire-common": "^5.2.0",
     "google-map-react": "^2.1.10",
     "google-maps": "^4.3.3",
     "react": "^17.0.2",
     "react-accessible-accordion": "^4.0.0",
     "react-dom": "^17.0.2",
-    "react-instantsearch-dom": "^6.13.0",
+    "react-instantsearch-dom": "^6.22.0",
     "react-instantsearch-dom-maps": "^6.13.0",
     "react-modal": "^3.14.3",
     "react-promise-tracker": "^2.1.0",
     "react-redux": "^7.2.5",
-    "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
+    "react-router-dom": "^6.2.2",
+    "react-scripts": "^5.0.0",
     "redux-devtools-extension": "^2.13.9",
-    "redux-firestore": "^0.15.0",
+    "redux-firestore": "^1.0.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
